# regal

./: .gitignore  Cargo.toml  README.md
regal/: Cargo.toml
regal-compiler/: Cargo.toml
regal-compiler/src/: bitset.rs  dfa.rs  lib.rs  nfa.rs  pattern.rs
regal-macros/: Cargo.toml
regal-macros/src/: bitset.rs  dfa.rs  lib.rs  nfa.rs  pattern.rs
regal-macros/tests/: trybuild.rs
regal-macros/tests/ui/: basic.rs  invalid_priority.rs  invalid_priority.stderr  missing_pattern.rs  missing_pattern.stderr  regex_features.rs
regal/src/: bitset.rs  compile.rs  dfa.rs  incremental.rs  lexer.rs  lib.rs  nfa.rs  pattern.rs
regal/tests/: compile.rs  incremental.rs  lexer.rs  macro_basic.rs
src/: bitset.rs  compile.rs  dfa.rs  lib.rs  nfa.rs
tests/: incremental.rs
