[workspace]
members = [
    "regal",
    "regal-macros",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
heapless = { version = "0.8", default-features = false }
proc-macro2 = "1"
quote = "1"
regex-syntax = "0.8"
syn = { version = "2", features = ["full"] }
trybuild = "1"
