[workspace]
members = [
    "regal",
    "regal-macros",
    "regal-compiler",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
heapless = { version = "0.9.1", default-features = false }
proc-macro2 = "1.0.103"
quote = "1.0.41"
regex-syntax = "0.8.8"
syn = { version = "2.0.108", features = ["full"] }
trybuild = "1.0.113"
