[package]
name = "regal-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
regex-syntax.workspace = true
syn = { workspace = true, features = ["full"] }
regal = { path = "../regal" }
regal-compiler = { path = "../regal-compiler" }

[dev-dependencies]
trybuild.workspace = true
